fix gap of cards on mobile

--- a/src/ui/card/card.module.scss
+++ b/src/ui/card/card.module.scss
@@ -33,7 +33,6 @@
     }
 
     &__first{
-        height: 20rem;
 
         @include tablet{
             width: 21.1875rem;
